Lab_4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    LPARENSQUARE
    RPARENSQUARE

Grammar

Rule 0     S' -> main_statements
Rule 1     main_statements -> LPARENCURLY statements RPARENCURLY main_statements
Rule 2     main_statements -> main_statements LPARENCURLY statements RPARENCURLY
Rule 3     main_statements -> main_statements main_statements
Rule 4     main_statements -> statements
Rule 5     main_statements -> loop_statement
Rule 6     main_statements -> if_statement
Rule 7     loop_statement -> WHILE LPAREN condition RPAREN loop_instruction_statement
Rule 8     loop_statement -> FOR ID ASSIGN num_expression RANGE num_expression loop_instruction_statement
Rule 9     if_statement -> IF LPAREN condition RPAREN instruction_statement
Rule 10    if_statement -> IF LPAREN condition RPAREN instruction_statement else_statement
Rule 11    else_statement -> ELSE instruction_statement
Rule 12    else_statement -> ELSE if_statement
Rule 13    loop_instruction_statement -> LPARENCURLY main_statements_break_continue RPARENCURLY
Rule 14    loop_instruction_statement -> statement SEMICOLON
Rule 15    loop_instruction_statement -> loop_statement
Rule 16    loop_instruction_statement -> BREAK SEMICOLON
Rule 17    loop_instruction_statement -> CONTINUE SEMICOLON
Rule 18    main_statements_break_continue -> main_statements
Rule 19    main_statements_break_continue -> if_break_continue
Rule 20    main_statements_break_continue -> main_statements_break_continue main_statements_break_continue
Rule 21    main_statements_break_continue -> main_statements_break_continue CONTINUE SEMICOLON main_statements_break_continue
Rule 22    main_statements_break_continue -> main_statements_break_continue BREAK SEMICOLON main_statements_break_continue
Rule 23    main_statements_break_continue -> empty
Rule 24    else_break_continue -> ELSE instruction_statement_break_continue
Rule 25    else_break_continue -> ELSE if_break_continue
Rule 26    if_break_continue -> IF LPAREN condition RPAREN instruction_statement_break_continue
Rule 27    if_break_continue -> IF LPAREN condition RPAREN instruction_statement_break_continue else_break_continue
Rule 28    instruction_statement_break_continue -> LPARENCURLY main_statements_break_continue RPARENCURLY
Rule 29    instruction_statement_break_continue -> LPARENCURLY empty RPARENCURLY
Rule 30    instruction_statement_break_continue -> statement SEMICOLON
Rule 31    instruction_statement_break_continue -> BREAK SEMICOLON
Rule 32    instruction_statement_break_continue -> CONTINUE SEMICOLON
Rule 33    instruction_statement -> LPARENCURLY main_statements RPARENCURLY
Rule 34    instruction_statement -> LPARENCURLY empty RPARENCURLY
Rule 35    instruction_statement -> statement SEMICOLON
Rule 36    condition -> num_expression EQUALITY num_expression
Rule 37    condition -> num_expression INEQUALITY num_expression
Rule 38    condition -> num_expression GREATER num_expression
Rule 39    condition -> num_expression GREATER_EQUAL num_expression
Rule 40    condition -> num_expression LESS num_expression
Rule 41    condition -> num_expression LESS_EQUAL num_expression
Rule 42    condition -> LPAREN condition RPAREN
Rule 43    statements -> statement SEMICOLON statements
Rule 44    statements -> statement SEMICOLON
Rule 45    statement -> PRINT print_expression
Rule 46    print_expression -> expression
Rule 47    print_expression -> expression COMMA print_expression
Rule 48    expression -> num_expression
Rule 49    expression -> matrix_expression
Rule 50    expression -> STRING
Rule 51    statement -> ID ASSIGN STRING
Rule 52    statement -> ID REF ASSIGN num_expression
Rule 53    statement -> ID REF ADDASSIGN num_expression
Rule 54    statement -> ID REF SUBASSIGN num_expression
Rule 55    statement -> ID REF MULASSIGN num_expression
Rule 56    statement -> ID REF DIVASSIGN num_expression
Rule 57    statement -> ID ASSIGN num_expression
Rule 58    statement -> ID ADDASSIGN num_expression
Rule 59    statement -> ID SUBASSIGN num_expression
Rule 60    statement -> ID MULASSIGN num_expression
Rule 61    statement -> ID DIVASSIGN num_expression
Rule 62    num_expression -> ID
Rule 63    matrix_expression -> ID
Rule 64    num_expression -> LPAREN num_expression RPAREN
Rule 65    matrix_expression -> LPAREN matrix_expression RPAREN
Rule 66    num_expression -> num_expression ADD num_expression
Rule 67    num_expression -> num_expression SUB num_expression
Rule 68    num_expression -> num_expression MUL num_expression
Rule 69    num_expression -> num_expression DIV num_expression
Rule 70    matrix_expression -> matrix_expression ADD matrix_expression
Rule 71    matrix_expression -> matrix_expression SUB matrix_expression
Rule 72    matrix_expression -> matrix_expression MUL matrix_expression
Rule 73    matrix_expression -> matrix_expression DIV matrix_expression
Rule 74    matrix_expression -> matrix_expression DOTADD matrix_expression
Rule 75    matrix_expression -> matrix_expression DOTSUB matrix_expression
Rule 76    matrix_expression -> matrix_expression DOTMUL matrix_expression
Rule 77    matrix_expression -> matrix_expression DOTDIV matrix_expression
Rule 78    statement -> ID ASSIGN matrix_expression
Rule 79    statement -> ID ADDASSIGN matrix_expression
Rule 80    statement -> ID SUBASSIGN matrix_expression
Rule 81    statement -> ID MULASSIGN matrix_expression
Rule 82    statement -> ID DIVASSIGN matrix_expression
Rule 83    num_expression -> SUB num_expression
Rule 84    matrix_expression -> SUB matrix_expression
Rule 85    matrix_expression -> matrix_expression TRANSPOSE
Rule 86    num_expression -> INTNUM
Rule 87    num_expression -> FLOATNUM
Rule 88    matrix_expression -> ZEROS LPAREN num_expression RPAREN
Rule 89    matrix_expression -> ONES LPAREN num_expression RPAREN
Rule 90    matrix_expression -> EYE LPAREN num_expression RPAREN
Rule 91    matrix_expression -> ONES LPAREN num_expression COMMA num_expression RPAREN
Rule 92    matrix_expression -> ZEROS LPAREN num_expression COMMA num_expression RPAREN
Rule 93    matrix_expression -> MATRIX
Rule 94    statement -> return_statement
Rule 95    return_statement -> RETURN expression
Rule 96    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 66 70
ADDASSIGN            : 53 58 79
ASSIGN               : 8 51 52 57 78
BREAK                : 16 22 31
COMMA                : 47 91 92
COMMENT              : 
CONTINUE             : 17 21 32
DIV                  : 69 73
DIVASSIGN            : 56 61 82
DOTADD               : 74
DOTDIV               : 77
DOTMUL               : 76
DOTSUB               : 75
ELSE                 : 11 12 24 25
EQUALITY             : 36
EYE                  : 90
FLOATNUM             : 87
FOR                  : 8
GREATER              : 38
GREATER_EQUAL        : 39
ID                   : 8 51 52 53 54 55 56 57 58 59 60 61 62 63 78 79 80 81 82
IF                   : 9 10 26 27
INEQUALITY           : 37
INTNUM               : 86
LESS                 : 40
LESS_EQUAL           : 41
LPAREN               : 7 9 10 26 27 42 64 65 88 89 90 91 92
LPARENCURLY          : 1 2 13 28 29 33 34
LPARENSQUARE         : 
MATRIX               : 93
MUL                  : 68 72
MULASSIGN            : 55 60 81
ONES                 : 89 91
PRINT                : 45
RANGE                : 8
REF                  : 52 53 54 55 56
RETURN               : 95
RPAREN               : 7 9 10 26 27 42 64 65 88 89 90 91 92
RPARENCURLY          : 1 2 13 28 29 33 34
RPARENSQUARE         : 
SEMICOLON            : 14 16 17 21 22 30 31 32 35 43 44
STRING               : 50 51
SUB                  : 67 71 83 84
SUBASSIGN            : 54 59 80
TRANSPOSE            : 85
WHILE                : 7
ZEROS                : 88 92
error                : 

Nonterminals, with rules where they appear

condition            : 7 9 10 26 27 42
else_break_continue  : 27
else_statement       : 10
empty                : 23 29 34
expression           : 46 47 95
if_break_continue    : 19 25
if_statement         : 6 12
instruction_statement : 9 10 11
instruction_statement_break_continue : 24 26 27
loop_instruction_statement : 7 8
loop_statement       : 5 15
main_statements      : 1 2 3 3 18 33 0
main_statements_break_continue : 13 20 20 21 21 22 22 28
matrix_expression    : 49 65 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 79 80 81 82 84 85
num_expression       : 8 8 36 36 37 37 38 38 39 39 40 40 41 41 48 52 53 54 55 56 57 58 59 60 61 64 66 66 67 67 68 68 69 69 83 88 89 90 91 91 92 92
print_expression     : 45 47
return_statement     : 94
statement            : 14 30 35 43 44
statements           : 1 2 4 43

Parsing method: LALR

state 0

    (0) S' -> . main_statements
    (1) main_statements -> . LPARENCURLY statements RPARENCURLY main_statements
    (2) main_statements -> . main_statements LPARENCURLY statements RPARENCURLY
    (3) main_statements -> . main_statements main_statements
    (4) main_statements -> . statements
    (5) main_statements -> . loop_statement
    (6) main_statements -> . if_statement
    (43) statements -> . statement SEMICOLON statements
    (44) statements -> . statement SEMICOLON
    (7) loop_statement -> . WHILE LPAREN condition RPAREN loop_instruction_statement
    (8) loop_statement -> . FOR ID ASSIGN num_expression RANGE num_expression loop_instruction_statement
    (9) if_statement -> . IF LPAREN condition RPAREN instruction_statement
    (10) if_statement -> . IF LPAREN condition RPAREN instruction_statement else_statement
    (45) statement -> . PRINT print_expression
    (51) statement -> . ID ASSIGN STRING
    (52) statement -> . ID REF ASSIGN num_expression
    (53) statement -> . ID REF ADDASSIGN num_expression
    (54) statement -> . ID REF SUBASSIGN num_expression
    (55) statement -> . ID REF MULASSIGN num_expression
    (56) statement -> . ID REF DIVASSIGN num_expression
    (57) statement -> . ID ASSIGN num_expression
    (58) statement -> . ID ADDASSIGN num_expression
    (59) statement -> . ID SUBASSIGN num_expression
    (60) statement -> . ID MULASSIGN num_expression
    (61) statement -> . ID DIVASSIGN num_expression
    (78) statement -> . ID ASSIGN matrix_expression
    (79) statement -> . ID ADDASSIGN matrix_expression
    (80) statement -> . ID SUBASSIGN matrix_expression
    (81) statement -> . ID MULASSIGN matrix_expression
    (82) statement -> . ID DIVASSIGN matrix_expression
    (94) statement -> . return_statement
    (95) return_statement -> . RETURN expression

    LPARENCURLY     shift and go to state 2
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    IF              shift and go to state 10
    PRINT           shift and go to state 11
    ID              shift and go to state 9
    RETURN          shift and go to state 13

    main_statements                shift and go to state 1
    statements                     shift and go to state 3
    loop_statement                 shift and go to state 4
    if_statement                   shift and go to state 5
    statement                      shift and go to state 6
    return_statement               shift and go to state 12

state 1

    (0) S' -> main_statements .
    (2) main_statements -> main_statements . LPARENCURLY statements RPARENCURLY
    (3) main_statements -> main_statements . main_statements
    (1) main_statements -> . LPARENCURLY statements RPARENCURLY main_statements
    (2) main_statements -> . main_statements LPARENCURLY statements RPARENCURLY
    (3) main_statements -> . main_statements main_statements
    (4) main_statements -> . statements
    (5) main_statements -> . loop_statement
    (6) main_statements -> . if_statement
    (43) statements -> . statement SEMICOLON statements
    (44) statements -> . statement SEMICOLON
    (7) loop_statement -> . WHILE LPAREN condition RPAREN loop_instruction_statement
    (8) loop_statement -> . FOR ID ASSIGN num_expression RANGE num_expression loop_instruction_statement
    (9) if_statement -> . IF LPAREN condition RPAREN instruction_statement
    (10) if_statement -> . IF LPAREN condition RPAREN instruction_statement else_statement
    (45) statement -> . PRINT print_expression
    (51) statement -> . ID ASSIGN STRING
    (52) statement -> . ID REF ASSIGN num_expression
    (53) statement -> . ID REF ADDASSIGN num_expression
    (54) statement -> . ID REF SUBASSIGN num_expression
    (55) statement -> . ID REF MULASSIGN num_expression
    (56) statement -> . ID REF DIVASSIGN num_expression
    (57) statement -> . ID ASSIGN num_expression
    (58) statement -> . ID ADDASSIGN num_expression
    (59) statement -> . ID SUBASSIGN num_expression
    (60) statement -> . ID MULASSIGN num_expression
    (61) statement -> . ID DIVASSIGN num_expression
    (78) statement -> . ID ASSIGN matrix_expression
    (79) statement -> . ID ADDASSIGN matrix_expression
    (80) statement -> . ID SUBASSIGN matrix_expression
    (81) statement -> . ID MULASSIGN matrix_expression
    (82) statement -> . ID DIVASSIGN matrix_expression
    (94) statement -> . return_statement
    (95) return_statement -> . RETURN expression

    LPARENCURLY     shift and go to state 15
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    IF              shift and go to state 10
    PRINT           shift and go to state 11
    ID              shift and go to state 9
    RETURN          shift and go to state 13

    main_statements                shift and go to state 14
    statements                     shift and go to state 3
    loop_statement                 shift and go to state 4
    if_statement                   shift and go to state 5
    statement                      shift and go to state 6
    return_statement               shift and go to state 12

state 2

    (1) main_statements -> LPARENCURLY . statements RPARENCURLY main_statements
    (43) statements -> . statement SEMICOLON statements
    (44) statements -> . statement SEMICOLON
    (45) statement -> . PRINT print_expression
    (51) statement -> . ID ASSIGN STRING
    (52) statement -> . ID REF ASSIGN num_expression
    (53) statement -> . ID REF ADDASSIGN num_expression
    (54) statement -> . ID REF SUBASSIGN num_expression
    (55) statement -> . ID REF MULASSIGN num_expression
    (56) statement -> . ID REF DIVASSIGN num_expression
    (57) statement -> . ID ASSIGN num_expression
    (58) statement -> . ID ADDASSIGN num_expression
    (59) statement -> . ID SUBASSIGN num_expression
    (60) statement -> . ID MULASSIGN num_expression
    (61) statement -> . ID DIVASSIGN num_expression
    (78) statement -> . ID ASSIGN matrix_expression
    (79) statement -> . ID ADDASSIGN matrix_expression
    (80) statement -> . ID SUBASSIGN matrix_expression
    (81) statement -> . ID MULASSIGN matrix_expression
    (82) statement -> . ID DIVASSIGN matrix_expression
    (94) statement -> . return_statement
    (95) return_statement -> . RETURN expression

    PRINT           shift and go to state 11
    ID              shift and go to state 9
    RETURN          shift and go to state 13

    statements                     shift and go to state 16
    statement                      shift and go to state 6
    return_statement               shift and go to state 12

state 3

    (4) main_statements -> statements .

    LPARENCURLY     reduce using rule 4 (main_statements -> statements .)
    WHILE           reduce using rule 4 (main_statements -> statements .)
    FOR             reduce using rule 4 (main_statements -> statements .)
    IF              reduce using rule 4 (main_statements -> statements .)
    PRINT           reduce using rule 4 (main_statements -> statements .)
    ID              reduce using rule 4 (main_statements -> statements .)
    RETURN          reduce using rule 4 (main_statements -> statements .)
    $end            reduce using rule 4 (main_statements -> statements .)
    RPARENCURLY     reduce using rule 4 (main_statements -> statements .)
    CONTINUE        reduce using rule 4 (main_statements -> statements .)
    BREAK           reduce using rule 4 (main_statements -> statements .)


state 4

    (5) main_statements -> loop_statement .

    LPARENCURLY     reduce using rule 5 (main_statements -> loop_statement .)
    WHILE           reduce using rule 5 (main_statements -> loop_statement .)
    FOR             reduce using rule 5 (main_statements -> loop_statement .)
    IF              reduce using rule 5 (main_statements -> loop_statement .)
    PRINT           reduce using rule 5 (main_statements -> loop_statement .)
    ID              reduce using rule 5 (main_statements -> loop_statement .)
    RETURN          reduce using rule 5 (main_statements -> loop_statement .)
    $end            reduce using rule 5 (main_statements -> loop_statement .)
    RPARENCURLY     reduce using rule 5 (main_statements -> loop_statement .)
    CONTINUE        reduce using rule 5 (main_statements -> loop_statement .)
    BREAK           reduce using rule 5 (main_statements -> loop_statement .)


state 5

    (6) main_statements -> if_statement .

    LPARENCURLY     reduce using rule 6 (main_statements -> if_statement .)
    WHILE           reduce using rule 6 (main_statements -> if_statement .)
    FOR             reduce using rule 6 (main_statements -> if_statement .)
    IF              reduce using rule 6 (main_statements -> if_statement .)
    PRINT           reduce using rule 6 (main_statements -> if_statement .)
    ID              reduce using rule 6 (main_statements -> if_statement .)
    RETURN          reduce using rule 6 (main_statements -> if_statement .)
    $end            reduce using rule 6 (main_statements -> if_statement .)
    RPARENCURLY     reduce using rule 6 (main_statements -> if_statement .)
    CONTINUE        reduce using rule 6 (main_statements -> if_statement .)
    BREAK           reduce using rule 6 (main_statements -> if_statement .)


state 6

    (43) statements -> statement . SEMICOLON statements
    (44) statements -> statement . SEMICOLON

    SEMICOLON       shift and go to state 17


state 7

    (7) loop_statement -> WHILE . LPAREN condition RPAREN loop_instruction_statement

    LPAREN          shift and go to state 18


state 8

    (8) loop_statement -> FOR . ID ASSIGN num_expression RANGE num_expression loop_instruction_statement

    ID              shift and go to state 19


state 9

    (51) statement -> ID . ASSIGN STRING
    (52) statement -> ID . REF ASSIGN num_expression
    (53) statement -> ID . REF ADDASSIGN num_expression
    (54) statement -> ID . REF SUBASSIGN num_expression
    (55) statement -> ID . REF MULASSIGN num_expression
    (56) statement -> ID . REF DIVASSIGN num_expression
    (57) statement -> ID . ASSIGN num_expression
    (58) statement -> ID . ADDASSIGN num_expression
    (59) statement -> ID . SUBASSIGN num_expression
    (60) statement -> ID . MULASSIGN num_expression
    (61) statement -> ID . DIVASSIGN num_expression
    (78) statement -> ID . ASSIGN matrix_expression
    (79) statement -> ID . ADDASSIGN matrix_expression
    (80) statement -> ID . SUBASSIGN matrix_expression
    (81) statement -> ID . MULASSIGN matrix_expression
    (82) statement -> ID . DIVASSIGN matrix_expression

    ASSIGN          shift and go to state 20
    REF             shift and go to state 21
    ADDASSIGN       shift and go to state 22
    SUBASSIGN       shift and go to state 23
    MULASSIGN       shift and go to state 24
    DIVASSIGN       shift and go to state 25


state 10

    (9) if_statement -> IF . LPAREN condition RPAREN instruction_statement
    (10) if_statement -> IF . LPAREN condition RPAREN instruction_statement else_statement

    LPAREN          shift and go to state 26


state 11

    (45) statement -> PRINT . print_expression
    (46) print_expression -> . expression
    (47) print_expression -> . expression COMMA print_expression
    (48) expression -> . num_expression
    (49) expression -> . matrix_expression
    (50) expression -> . STRING
    (62) num_expression -> . ID
    (64) num_expression -> . LPAREN num_expression RPAREN
    (66) num_expression -> . num_expression ADD num_expression
    (67) num_expression -> . num_expression SUB num_expression
    (68) num_expression -> . num_expression MUL num_expression
    (69) num_expression -> . num_expression DIV num_expression
    (83) num_expression -> . SUB num_expression
    (86) num_expression -> . INTNUM
    (87) num_expression -> . FLOATNUM
    (63) matrix_expression -> . ID
    (65) matrix_expression -> . LPAREN matrix_expression RPAREN
    (70) matrix_expression -> . matrix_expression ADD matrix_expression
    (71) matrix_expression -> . matrix_expression SUB matrix_expression
    (72) matrix_expression -> . matrix_expression MUL matrix_expression
    (73) matrix_expression -> . matrix_expression DIV matrix_expression
    (74) matrix_expression -> . matrix_expression DOTADD matrix_expression
    (75) matrix_expression -> . matrix_expression DOTSUB matrix_expression
    (76) matrix_expression -> . matrix_expression DOTMUL matrix_expression
    (77) matrix_expression -> . matrix_expression DOTDIV matrix_expression
    (84) matrix_expression -> . SUB matrix_expression
    (85) matrix_expression -> . matrix_expression TRANSPOSE
    (88) matrix_expression -> . ZEROS LPAREN num_expression RPAREN
    (89) matrix_expression -> . ONES LPAREN num_expression RPAREN
    (90) matrix_expression -> . EYE LPAREN num_expression RPAREN
    (91) matrix_expression -> . ONES LPAREN num_expression COMMA num_expression RPAREN
    (92) matrix_expression -> . ZEROS LPAREN num_expression COMMA num_expression RPAREN
    (93) matrix_expression -> . MATRIX

    STRING          shift and go to state 31
    ID              shift and go to state 32
    LPAREN          shift and go to state 33
    SUB             shift and go to state 34
    INTNUM          shift and go to state 35
    FLOATNUM        shift and go to state 36
    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    EYE             shift and go to state 39
    MATRIX          shift and go to state 40

    print_expression               shift and go to state 27
    expression                     shift and go to state 28
    num_expression                 shift and go to state 29
    matrix_expression              shift and go to state 30

state 12

    (94) statement -> return_statement .

    SEMICOLON       reduce using rule 94 (statement -> return_statement .)


state 13

    (95) return_statement -> RETURN . expression
    (48) expression -> . num_expression
    (49) expression -> . matrix_expression
    (50) expression -> . STRING
    (62) num_expression -> . ID
    (64) num_expression -> . LPAREN num_expression RPAREN
    (66) num_expression -> . num_expression ADD num_expression
    (67) num_expression -> . num_expression SUB num_expression
    (68) num_expression -> . num_expression MUL num_expression
    (69) num_expression -> . num_expression DIV num_expression
    (83) num_expression -> . SUB num_expression
    (86) num_expression -> . INTNUM
    (87) num_expression -> . FLOATNUM
    (63) matrix_expression -> . ID
    (65) matrix_expression -> . LPAREN matrix_expression RPAREN
    (70) matrix_expression -> . matrix_expression ADD matrix_expression
    (71) matrix_expression -> . matrix_expression SUB matrix_expression
    (72) matrix_expression -> . matrix_expression MUL matrix_expression
    (73) matrix_expression -> . matrix_expression DIV matrix_expression
    (74) matrix_expression -> . matrix_expression DOTADD matrix_expression
    (75) matrix_expression -> . matrix_expression DOTSUB matrix_expression
    (76) matrix_expression -> . matrix_expression DOTMUL matrix_expression
    (77) matrix_expression -> . matrix_expression DOTDIV matrix_expression
    (84) matrix_expression -> . SUB matrix_expression
    (85) matrix_expression -> . matrix_expression TRANSPOSE
    (88) matrix_expression -> . ZEROS LPAREN num_expression RPAREN
    (89) matrix_expression -> . ONES LPAREN num_expression RPAREN
    (90) matrix_expression -> . EYE LPAREN num_expression RPAREN
    (91) matrix_expression -> . ONES LPAREN num_expression COMMA num_expression RPAREN
    (92) matrix_expression -> . ZEROS LPAREN num_expression COMMA num_expression RPAREN
    (93) matrix_expression -> . MATRIX

    STRING          shift and go to state 31
    ID              shift and go to state 32
    LPAREN          shift and go to state 33
    SUB             shift and go to state 34
    INTNUM          shift and go to state 35
    FLOATNUM        shift and go to state 36
    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    EYE             shift and go to state 39
    MATRIX          shift and go to state 40

    expression                     shift and go to state 41
    num_expression                 shift and go to state 29
    matrix_expression              shift and go to state 30

state 14

    (3) main_statements -> main_statements main_statements .
    (2) main_statements -> main_statements . LPARENCURLY statements RPARENCURLY
    (3) main_statements -> main_statements . main_statements
    (1) main_statements -> . LPARENCURLY statements RPARENCURLY main_statements
    (2) main_statements -> . main_statements LPARENCURLY statements RPARENCURLY
    (3) main_statements -> . main_statements main_statements
    (4) main_statements -> . statements
    (5) main_statements -> . loop_statement
    (6) main_statements -> . if_statement
    (43) statements -> . statement SEMICOLON statements
    (44) statements -> . statement SEMICOLON
    (7) loop_statement -> . WHILE LPAREN condition RPAREN loop_instruction_statement
    (8) loop_statement -> . FOR ID ASSIGN num_expression RANGE num_expression loop_instruction_statement
    (9) if_statement -> . IF LPAREN condition RPAREN instruction_statement
    (10) if_statement -> . IF LPAREN condition RPAREN instruction_statement else_statement
    (45) statement -> . PRINT print_expression
    (51) statement -> . ID ASSIGN STRING
    (52) statement -> . ID REF ASSIGN num_expression
    (53) statement -> . ID REF ADDASSIGN num_expression
    (54) statement -> . ID REF SUBASSIGN num_expression
    (55) statement -> . ID REF MULASSIGN num_expression
    (56) statement -> . ID REF DIVASSIGN num_expression
    (57) statement -> . ID ASSIGN num_expression
    (58) statement -> . ID ADDASSIGN num_expression
    (59) statement -> . ID SUBASSIGN num_expression
    (60) statement -> . ID MULASSIGN num_expression
    (61) statement -> . ID DIVASSIGN num_expression
    (78) statement -> . ID ASSIGN matrix_expression
    (79) statement -> . ID ADDASSIGN matrix_expression
    (80) statement -> . ID SUBASSIGN matrix_expression
    (81) statement -> . ID MULASSIGN matrix_expression
    (82) statement -> . ID DIVASSIGN matrix_expression
    (94) statement -> . return_statement
    (95) return_statement -> . RETURN expression

  ! shift/reduce conflict for LPARENCURLY resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    $end            reduce using rule 3 (main_statements -> main_statements main_statements .)
    RPARENCURLY     reduce using rule 3 (main_statements -> main_statements main_statements .)
    CONTINUE        reduce using rule 3 (main_statements -> main_statements main_statements .)
    BREAK           reduce using rule 3 (main_statements -> main_statements main_statements .)
    LPARENCURLY     shift and go to state 15
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    IF              shift and go to state 10
    PRINT           shift and go to state 11
    ID              shift and go to state 9
    RETURN          shift and go to state 13

  ! LPARENCURLY     [ reduce using rule 3 (main_statements -> main_statements main_statements .) ]
  ! WHILE           [ reduce using rule 3 (main_statements -> main_statements main_statements .) ]
  ! FOR             [ reduce using rule 3 (main_statements -> main_statements main_statements .) ]
  ! IF              [ reduce using rule 3 (main_statements -> main_statements main_statements .) ]
  ! PRINT           [ reduce using rule 3 (main_statements -> main_statements main_statements .) ]
  ! ID              [ reduce using rule 3 (main_statements -> main_statements main_statements .) ]
  ! RETURN          [ reduce using rule 3 (main_statements -> main_statements main_statements .) ]

    main_statements                shift and go to state 14
    statements                     shift and go to state 3
    loop_statement                 shift and go to state 4
    if_statement                   shift and go to state 5
    statement                      shift and go to state 6
    return_statement               shift and go to state 12

state 15

    (2) main_statements -> main_statements LPARENCURLY . statements RPARENCURLY
    (1) main_statements -> LPARENCURLY . statements RPARENCURLY main_statements
    (43) statements -> . statement SEMICOLON statements
    (44) statements -> . statement SEMICOLON
    (45) statement -> . PRINT print_expression
    (51) statement -> . ID ASSIGN STRING
    (52) statement -> . ID REF ASSIGN num_expression
    (53) statement -> . ID REF ADDASSIGN num_expression
    (54) statement -> . ID REF SUBASSIGN num_expression
    (55) statement -> . ID REF MULASSIGN num_expression
    (56) statement -> . ID REF DIVASSIGN num_expression
    (57) statement -> . ID ASSIGN num_expression
    (58) statement -> . ID ADDASSIGN num_expression
    (59) statement -> . ID SUBASSIGN num_expression
    (60) statement -> . ID MULASSIGN num_expression
    (61) statement -> . ID DIVASSIGN num_expression
    (78) statement -> . ID ASSIGN matrix_expression
    (79) statement -> . ID ADDASSIGN matrix_expression
    (80) statement -> . ID SUBASSIGN matrix_expression
    (81) statement -> . ID MULASSIGN matrix_expression
    (82) statement -> . ID DIVASSIGN matrix_expression
    (94) statement -> . return_statement
    (95) return_statement -> . RETURN expression

    PRINT           shift and go to state 11
    ID              shift and go to state 9
    RETURN          shift and go to state 13

    statements                     shift and go to state 42
    statement                      shift and go to state 6
    return_statement               shift and go to state 12

state 16

    (1) main_statements -> LPARENCURLY statements . RPARENCURLY main_statements

    RPARENCURLY     shift and go to state 43


state 17

    (43) statements -> statement SEMICOLON . statements
    (44) statements -> statement SEMICOLON .
    (43) statements -> . statement SEMICOLON statements
    (44) statements -> . statement SEMICOLON
    (45) statement -> . PRINT print_expression
    (51) statement -> . ID ASSIGN STRING
    (52) statement -> . ID REF ASSIGN num_expression
    (53) statement -> . ID REF ADDASSIGN num_expression
    (54) statement -> . ID REF SUBASSIGN num_expression
    (55) statement -> . ID REF MULASSIGN num_expression
    (56) statement -> . ID REF DIVASSIGN num_expression
    (57) statement -> . ID ASSIGN num_expression
    (58) statement -> . ID ADDASSIGN num_expression
    (59) statement -> . ID SUBASSIGN num_expression
    (60) statement -> . ID MULASSIGN num_expression
    (61) statement -> . ID DIVASSIGN num_expression
    (78) statement -> . ID ASSIGN matrix_expression
    (79) statement -> . ID ADDASSIGN matrix_expression
    (80) statement -> . ID SUBASSIGN matrix_expression
    (81) statement -> . ID MULASSIGN matrix_expression
    (82) statement -> . ID DIVASSIGN matrix_expression
    (94) statement -> . return_statement
    (95) return_statement -> . RETURN expression

  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    LPARENCURLY     reduce using rule 44 (statements -> statement SEMICOLON .)
    WHILE           reduce using rule 44 (statements -> statement SEMICOLON .)
    FOR             reduce using rule 44 (statements -> statement SEMICOLON .)
    IF              reduce using rule 44 (statements -> statement SEMICOLON .)
    $end            reduce using rule 44 (statements -> statement SEMICOLON .)
    RPARENCURLY     reduce using rule 44 (statements -> statement SEMICOLON .)
    CONTINUE        reduce using rule 44 (statements -> statement SEMICOLON .)
    BREAK           reduce using rule 44 (statements -> statement SEMICOLON .)
    PRINT           shift and go to state 11
    ID              shift and go to state 9
    RETURN          shift and go to state 13

  ! PRINT           [ reduce using rule 44 (statements -> statement SEMICOLON .) ]
  ! ID              [ reduce using rule 44 (statements -> statement SEMICOLON .) ]
  ! RETURN          [ reduce using rule 44 (statements -> statement SEMICOLON .) ]

    statement                      shift and go to state 6
    statements                     shift and go to state 44
    return_statement               shift and go to state 12

state 18

    (7) loop_statement -> WHILE LPAREN . condition RPAREN loop_instruction_statement
    (36) condition -> . num_expression EQUALITY num_expression
    (37) condition -> . num_expression INEQUALITY num_expression
    (38) condition -> . num_expression GREATER num_expression
    (39) condition -> . num_expression GREATER_EQUAL num_expression
    (40) condition -> . num_expression LESS num_expression
    (41) condition -> . num_expression LESS_EQUAL num_expression
    (42) condition -> . LPAREN condition RPAREN
    (62) num_expression -> . ID
    (64) num_expression -> . LPAREN num_expression RPAREN
    (66) num_expression -> . num_expression ADD num_expression
    (67) num_expression -> . num_expression SUB num_expression
    (68) num_expression -> . num_expression MUL num_expression
    (69) num_expression -> . num_expression DIV num_expression
    (83) num_expression -> . SUB num_expression
    (86) num_expression -> . INTNUM
    (87) num_expression -> . FLOATNUM

    LPAREN          shift and go to state 45
    ID              shift and go to state 48
    SUB             shift and go to state 49
    INTNUM          shift and go to state 35
    FLOATNUM        shift and go to state 36

    condition                      shift and go to state 46
    num_expression                 shift and go to state 47

state 19

    (8) loop_statement -> FOR ID . ASSIGN num_expression RANGE num_expression loop_instruction_statement

    ASSIGN          shift and go to state 50


state 20
